--- a/clien/package.json
+++ b/clien/package.json
@@ -6,9 +6,13 @@
     "@apollo/client": "^3.2.5",
     "cra-template": "1.1.0",
     "graphql": "^15.3.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
