--- a/clien/package.json
+++ b/clien/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "apollo-link-context": "^1.0.20",
     "cra-template": "1.1.0",
     "graphql": "^15.3.0",
     "moment": "^2.29.1",
